<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.EditProductActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:padding="16dp"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:fillViewport="true"
            >
            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:id="@+id/relative_colora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >
                    <TextView
                        android:transitionName="@string/transition_fab"
                        android:id="@+id/initiala"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:textStyle="bold"
                        android:textSize="80sp"
                        android:gravity="center"
                        android:background="@drawable/forma_circular"
                        />
                </RelativeLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/keya"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/claveprod"
                        android:gravity="center"
                        android:inputType="text"
                        android:enabled="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/innoma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombrepa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nom"
                        android:gravity="center"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inprea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pricea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/price"
                        android:inputType="number"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/indeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptiona"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="text"
                        android:gravity="center"
                        android:hint="@string/detail"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/incana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cuantosa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/cant"
                        android:inputType="number"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_actualizar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_update"
                    android:layout_centerInParent="true"
                    android:theme="@style/RaisedButton"
                    android:onClick="onClickActualizarProducto"
                    />
                <Button
                    android:id="@+id/btn_cancelara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel"
                    android:layout_centerInParent="true"
                    android:theme="@style/RaisedButton2"
                    android:onClick="closeActivity"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>