<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.AddProductActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:padding="16dp"
        >
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrolladd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                >
                <RelativeLayout
                    android:id="@+id/relative_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >
                    <TextView
                        android:transitionName="@string/transition_fab"
                        android:id="@+id/initial"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:textStyle="bold"
                        android:textSize="80sp"
                        android:gravity="center"
                        android:background="@drawable/forma_circular"
                        />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/incla"
                        android:layout_width="match_parent"
                        android:layout_weight="0.4"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/key"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/claveprod"
                            android:gravity="center"
                            android:inputType="text"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/escanear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="cod. de barras"
                        android:layout_weight="0.6"
                        android:textSize="10sp"
                        android:padding="0dp"
                        android:layout_marginTop="-5dp"
                        android:onClick="escanearCodigoDeBarras"
                        android:theme="@style/RaisedButton4"
                        />
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/innom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombrep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nom"
                        android:gravity="center"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inpre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/indes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="text"
                        android:gravity="center"
                        android:hint="@string/detail"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/incan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cuantos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/cant"
                        android:inputType="number"
                        android:layout_marginBottom="10dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_registrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_register"
                    android:layout_centerInParent="true"
                    android:theme="@style/RaisedButton"
                    android:onClick="onClickRegistrarProducto"
                    />
                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel"
                    android:layout_centerInParent="true"
                    android:theme="@style/RaisedButton2"
                    android:onClick="closeActivity"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>